--- a/index.html
+++ b/index.html
@@ -1,156 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Match-Match Game</title>
-    <link rel="shortcut icon" href="./assets/icons/favicon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/global/style.css">
-    <link rel="stylesheet" href="./styles/modals/style.css">
-</head>
-<body>
-    <div id="substrate" class="substrate-hidden"></div>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Match-Match Game</title>
+        <link rel="shortcut icon" href="./assets/icons/favicon.svg" type="image/x-icon" />
+        <link rel="stylesheet" href="./styles/global/style.css" />
+        <link rel="stylesheet" href="./styles/modals/style.css" />
+    </head>
+    <body>
+        <div id="substrate" class="substrate-hidden"></div>
 
-    <header class="header">
-        <div class="header-logo">
-            <div class="header-logo__container">
-                <h2 class="header-logo__text">Match</h2>
-            </div>
-            <div class="header-logo__container">
-                <h2 class="header-logo__text">Match</h2>
-            </div>
-        </div>
-        <nav class="header-nav">
-            <button class="header-nav__container">
-                <div class="header-nav__container-substrate"></div>
-                <div class="header-nav__container-card">
-                    <img src="./assets/icons/question.svg">
+        <header class="header">
+            <div class="header-logo">
+                <div class="header-logo__container">
+                    <h2 class="header-logo__text">Match</h2>
                 </div>
-                <p class="header-nav__container-text">About Game</p>
-            </button>
-            <button class="header-nav__container">
-                <img src="./assets/icons/star.svg">
-                <p class="header-nav__container-text">Best Score</p>
-            </button>
-            <button class="header-nav__container">
-                <img src="./assets/icons/settings.svg">
-                <p class="header-nav__container-text">Game Settings</p>
-            </button>
-        </nav>
-        <div class="header-container">
-            <button id="gameStateToggler" class="header-container__btn header-container__start-btn"><span id="gameStateText">Start</span> game</button>
-            <img src="" class="header-container__avatar" id="headerAvatar">
-            <button id="registerOpen" class="header-container__btn header-container__register-btn">register new player</button>
-        </div>
-    </header>
+                <div class="header-logo__container">
+                    <h2 class="header-logo__text">Match</h2>
+                </div>
+            </div>
+            <nav class="header-nav">
+                <button class="header-nav__container">
+                    <div class="header-nav__container-substrate"></div>
+                    <div class="header-nav__container-card">
+                        <img src="./assets/icons/question.svg" />
+                    </div>
+                    <p class="header-nav__container-text">About Game</p>
+                </button>
+                <button class="header-nav__container">
+                    <img src="./assets/icons/star.svg" />
+                    <p class="header-nav__container-text">Best Score</p>
+                </button>
+                <button class="header-nav__container">
+                    <img src="./assets/icons/settings.svg" />
+                    <p class="header-nav__container-text">Game Settings</p>
+                </button>
+            </nav>
+            <div class="header-container">
+                <button id="gameStateToggler" class="header-container__btn header-container__start-btn"><span id="gameStateText">Start</span> game</button>
+                <img src="" class="header-container__avatar" id="headerAvatar" />
+                <button id="registerOpen" class="header-container__btn header-container__register-btn">register new player</button>
+            </div>
+        </header>
 
-    <main class="main">
-        <section class="game">
-            <form name=MyForm>
-                <input class="game-time" name=stopwatch size=10 value="00:00" disabled>
-            </form>
-            <div class="game-field">
-                <div class="game-field__container" id=gameContainer_1>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_1" class="elephant" src="./assets/images/elephant.png" alt="">
+        <main class="main">
+            <section class="game">
+                <div class="game-time">
+                    <div id="minutes"></div>
+                    :
+                    <div id="seconds"></div>
                 </div>
-                <div class="game-field__container" id=gameContainer_2>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_2" class="elephant" src="./assets/images/elephant.png" alt="">
+                <div class="game-field">
+                    <div class="game-field__container" id="gameContainer_1">
+                        <div id="gameImage_1" class="game-field__container-image"></div>
+                        <img id="backsideCard_1" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_2">
+                        <div id="gameImage_2" class="game-field__container-image"></div>
+                        <img id="backsideCard_2" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_3">
+                        <div id="gameImage_3" class="game-field__container-image"></div>
+                        <img id="backsideCard_3" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_4">
+                        <div id="gameImage_4" class="game-field__container-image"></div>
+                        <img id="backsideCard_4" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_5">
+                        <div id="gameImage_5" class="game-field__container-image"></div>
+                        <img id="backsideCard_5" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_6">
+                        <div id="gameImage_6" class="game-field__container-image"></div>
+                        <img id="backsideCard_6" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_7">
+                        <div id="gameImage_7" class="game-field__container-image"></div>
+                        <img id="backsideCard_7" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_8">
+                        <div id="gameImage_8" class="game-field__container-image"></div>
+                        <img id="backsideCard_8" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_9">
+                        <div id="gameImage_9" class="game-field__container-image"></div>
+                        <img id="backsideCard_9" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_10">
+                        <div id="gameImage_10" class="game-field__container-image"></div>
+                        <img id="backsideCard_10" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_11">
+                        <div id="gameImage_11" class="game-field__container-image"></div>
+                        <img id="backsideCard_11" src="./assets/images/card-top.png" />
+                    </div>
+                    <div class="game-field__container" id="gameContainer_12">
+                        <div id="gameImage_12" class="game-field__container-image"></div>
+                        <img id="backsideCard_12" src="./assets/images/card-top.png" />
+                    </div>
                 </div>
-                <div class="game-field__container" id=gameContainer_3>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_3" class="wolf" src="./assets/images/wolf.png" alt="">
+            </section>
+        </main>
+
+        <section id="registerWindow" class="register">
+            <div class="register-header">
+                <h2 class="register-header__title">Register new Player</h2>
+            </div>
+            <div class="register-body">
+                <div class="register-container">
+                    <div class="register-card">
+                        <h3 class="register-card__title">First Name</h3>
+                        <p class="register-card__error-text" id="registerErrText_1"></p>
+                        <input type="text" id="registerInput_1" class="register-card__input" />
+                        <img src="./assets/icons/check.svg" class="register-card__icon" id="registerIconCheck_1" />
+                        <div class="register-card__icon register-card__icon-error" id="registerIconErr_1">
+                            <img src="./assets/icons/error.png" />
+                        </div>
+                    </div>
+                    <div class="register-card">
+                        <h3 class="register-card__title">Last Name</h3>
+                        <p class="register-card__error-text" id="registerErrText_2"></p>
+                        <input type="text" id="registerInput_2" class="register-card__input" />
+                        <img src="./assets/icons/check.svg" class="register-card__icon" id="registerIconCheck_2" />
+                        <div class="register-card__icon register-card__icon-error" id="registerIconErr_2">
+                            <img src="./assets/icons/error.png" />
+                        </div>
+                    </div>
+                    <div class="register-card">
+                        <h3 class="register-card__title">E-mail</h3>
+                        <p class="register-card__error-text" id="registerErrText_3"></p>
+                        <input type="text" id="registerInput_3" class="register-card__input" />
+                        <img src="./assets/icons/check.svg" class="register-card__icon" id="registerIconCheck_3" />
+                        <div class="register-card__icon register-card__icon-error" id="registerIconErr_3">
+                            <img src="./assets/icons/error.png" />
+                        </div>
+                    </div>
                 </div>
-                <div class="game-field__container" id=gameContainer_4>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_4" class="wolf" src="./assets/images/wolf.png" alt="">
+                <div class="register-avatar">
+                    <input type="file" id="registerAvatar" accept="image/jpeg,image/png" class="register-avatar__input registerAvatar" />
+                    <label for="registerAvatar">
+                        <div class="register-avatar__icon" id="registerNoAvatar"></div>
+                        <img class="register-avatar__user-img" src="" id="registerUserAvatar" />
+                    </label>
                 </div>
-                <div class="game-field__container" id=gameContainer_5>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_5" class="bird" src="./assets/images/bird.png" alt="">
-                </div>
-                <div class="game-field__container" id=gameContainer_6>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_6" class="bird" src="./assets/images/bird.png" alt="">
-                </div>
-                <div class="game-field__container" id=gameContainer_7>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_7" class="lion" src="./assets/images/lion.png" alt="">
-                </div>
-                <div class="game-field__container" id=gameContainer_8>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_8" class="lion" src="./assets/images/lion.png" alt="">
-                </div>
-                <div class="game-field__container" id=gameContainer_9>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_9" class="tiger" src="./assets/images/tiger.png" alt="">
-                </div>
-                <div class="game-field__container" id=gameContainer_10>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_10" class="tiger" src="./assets/images/tiger.png" alt="">
-                </div>
-                <div class="game-field__container" id=gameContainer_11>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_11" class="pinguin" src="./assets/images/pinguin.png" alt="">
-                </div>
-                <div class="game-field__container" id=gameContainer_12>
-                    <!--<img src="./assets/images/card-top.png" alt="">-->
-                    <img id="gameImage_12" class="pinguin" src="./assets/images/pinguin.png" alt="">
-                </div>
+            </div>
+            <div class="register-footer">
+                <button class="register-footer__btn" id="registerAdd">Add user</button>
+                <button class="register-footer__btn" id="registerCancel">Cancel</button>
             </div>
         </section>
-    </main>
 
-    <section id="registerWindow" class="register">
-        <div class="register-header">
-            <h2 class="register-header__title">Register new Player</h2>
-        </div>
-        <div class="register-body">
-            <div class="register-container">
-                <div class="register-card">
-                    <h3 class="register-card__title">First Name</h3>
-                    <p class="register-card__error-text" id="registerErrText_1"></p>
-                    <input type="text" id="registerInput_1" class="register-card__input">
-                    <img src="./assets/icons/check.svg" class="register-card__icon" id="registerIconCheck_1">
-                    <div class="register-card__icon register-card__icon-error" id="registerIconErr_1">
-                        <img src="./assets/icons/error.png" alt="">
-                    </div>
-                </div>
-                <div class="register-card">
-                    <h3 class="register-card__title">Last Name</h3>
-                    <p class="register-card__error-text" id="registerErrText_2"></p>
-                    <input type="text" id="registerInput_2" class="register-card__input">
-                    <img src="./assets/icons/check.svg" class="register-card__icon" id="registerIconCheck_2">
-                    <div class="register-card__icon register-card__icon-error" id="registerIconErr_2">
-                        <img src="./assets/icons/error.png" alt="">
-                    </div>
-                </div>
-                <div class="register-card">
-                    <h3 class="register-card__title">E-mail</h3>
-                    <p class="register-card__error-text" id="registerErrText_3"></p>
-                    <input type="text" id="registerInput_3" class="register-card__input">
-                    <img src="./assets/icons/check.svg" class="register-card__icon" id="registerIconCheck_3">
-                    <div class="register-card__icon register-card__icon-error" id="registerIconErr_3">
-                        <img src="./assets/icons/error.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="register-avatar">
-                <input type="file" id="registerAvatar" accept="image/jpeg,image/png" class="register-avatar__input registerAvatar">
-                <label for="registerAvatar">
-                    <div class="register-avatar__icon" id="registerNoAvatar" alt=""></div>
-                    <img class="register-avatar__user-img" src="" id="registerUserAvatar">
-                </label>
-            </div>
-        </div>
-        <div class="register-footer">
-            <button class="register-footer__btn" id="registerAdd">Add user</button>
-            <button class="register-footer__btn" id="registerCancel">Cancel</button>
-        </div>
-    </section>
-
-    <script type="module" src="./scripts/script.js"></script>
-</body>
+        <script type="module" src="./ts-built/script.js"></script>
+        <script type="module" src="./ts-built/variables.js"></script>
+    </body>
 </html>
