--- a/index.html
+++ b/index.html
@@ -54,51 +54,51 @@
                 </div>
                 <div class="game-field">
                     <div class="game-field__container" id="gameContainer_1">
-                        <div id="gameImage_1" class="game-field__container-image"></div>
+                        <div id="gameImage_1"></div>
                         <img id="backsideCard_1" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_2">
-                        <div id="gameImage_2" class="game-field__container-image"></div>
+                        <div id="gameImage_2"></div>
                         <img id="backsideCard_2" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_3">
-                        <div id="gameImage_3" class="game-field__container-image"></div>
+                        <div id="gameImage_3"></div>
                         <img id="backsideCard_3" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_4">
-                        <div id="gameImage_4" class="game-field__container-image"></div>
+                        <div id="gameImage_4"></div>
                         <img id="backsideCard_4" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_5">
-                        <div id="gameImage_5" class="game-field__container-image"></div>
+                        <div id="gameImage_5"></div>
                         <img id="backsideCard_5" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_6">
-                        <div id="gameImage_6" class="game-field__container-image"></div>
+                        <div id="gameImage_6"></div>
                         <img id="backsideCard_6" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_7">
-                        <div id="gameImage_7" class="game-field__container-image"></div>
+                        <div id="gameImage_7"></div>
                         <img id="backsideCard_7" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_8">
-                        <div id="gameImage_8" class="game-field__container-image"></div>
+                        <div id="gameImage_8"></div>
                         <img id="backsideCard_8" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_9">
-                        <div id="gameImage_9" class="game-field__container-image"></div>
+                        <div id="gameImage_9"></div>
                         <img id="backsideCard_9" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_10">
-                        <div id="gameImage_10" class="game-field__container-image"></div>
+                        <div id="gameImage_10"></div>
                         <img id="backsideCard_10" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_11">
-                        <div id="gameImage_11" class="game-field__container-image"></div>
+                        <div id="gameImage_11"></div>
                         <img id="backsideCard_11" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_12">
-                        <div id="gameImage_12" class="game-field__container-image"></div>
+                        <div id="gameImage_12"></div>
                         <img id="backsideCard_12" src="./assets/images/card-top.png" />
                     </div>
                 </div>
