ref spawn images

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         </section>
 
         <script type="module" src="./ts-built/script.js"></script>
+        <script type="module" src="./ts-built/modals.js"></script>
         <script type="module" src="./ts-built/variables.js"></script>
     </body>
 </html>
