--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <div id="seconds"></div>
                 </div>
                 <div class="game-field">
+                    <div id="gameFieldSubstrate"></div>
                     <div class="game-field__container" id="gameContainer_1">
                         <div id="gameImage_1"></div>
                         <img id="backsideCard_1" src="./assets/images/card-top.png" />
