add succes/fail icons

--- a/index.html
+++ b/index.html
@@ -58,96 +58,96 @@
                         <div class="game-field__container-image" id="gameImage_1"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" id="failID" class="failHide gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" id="succesID" class="succesHide gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail1" id="fail" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes1" id="succes" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_1" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_2">
                         <div class="game-field__container-image" id="gameImage_2"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail2" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes2" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_2" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_3">
                         <div class="game-field__container-image" id="gameImage_3"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail3" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes3" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_3" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_4">
                         <div class="game-field__container-image" id="gameImage_4"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail4" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes4" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_4" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_5">
                         <div class="game-field__container-image" id="gameImage_5"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail5" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes5" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_5" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_6">
                         <div class="game-field__container-image" id="gameImage_6"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail6" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes6" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_6" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_7">
                         <div class="game-field__container-image" id="gameImage_7"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail7" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes7" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_7" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_8">
                         <div class="game-field__container-image" id="gameImage_8"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail8" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes8" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_8" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_9">
                         <div class="game-field__container-image" id="gameImage_9"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail9" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes9" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_9" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_10">
                         <div class="game-field__container-image" id="gameImage_10"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail10" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes10" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_10" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_11">
                         <div class="game-field__container-image" id="gameImage_11"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail11" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes11" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_11" src="./assets/images/card-top.png" />
                     </div>
                     <div class="game-field__container" id="gameContainer_12">
                         <div class="game-field__container-image" id="gameImage_12"></div>
                         <div class="game-field__container-background game-field__container-backgroundRed"></div>
                         <div class="game-field__container-background game-field__container-backgroundGreen"></div>
-                        <img src="./assets/icons/cross.png" alt="" class="fail gameImageStateIcon" />
-                        <img src="./assets/icons/check.png" alt="" class="succes gameImageStateIcon" />
+                        <img src="./assets/icons/cross.png" alt="" id="fail12" class="failHide gameImageStateIcon" />
+                        <img src="./assets/icons/check.png" alt="" id="succes12" class="succesHide gameImageStateIcon" />
                         <img class="cardCover" id="backsideCard_12" src="./assets/images/card-top.png" />
                     </div>
                 </div>
