--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" href="./styles/modals/style.css" />
     </head>
     <body>
-        <div id="substrate" class="substrate-hidden"></div>
+        <div id="substrate" class="substrate"></div>
+        <div id="substrate2" class="substrate"></div>
 
         <header class="header">
             <div class="header-logo">
@@ -209,7 +210,6 @@
             <button class="result-btn" id="resultBtn">OK</button>
         </section>
 
-        <script type="text/javascript" src="./assets/storage.json"></script>
         <script type="module" src="./ts-built/script.js"></script>
         <script type="module" src="./ts-built/modals.js"></script>
         <script type="module" src="./ts-built/variables.js"></script>
