--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
                 </div>
             </div>
             <nav class="header-nav">
-                <button class="header-nav__container">
+                <a class="header-nav__container">
                     <div class="header-nav__container-substrate"></div>
                     <div class="header-nav__container-card">
                         <img src="./assets/icons/question.svg" />
                     </div>
                     <p class="header-nav__container-text">About Game</p>
-                </button>
-                <button class="header-nav__container">
+                </a>
+                <a class="header-nav__container">
                     <img src="./assets/icons/star.svg" />
                     <p class="header-nav__container-text">Best Score</p>
-                </button>
-                <button class="header-nav__container">
+                </a>
+                <a class="header-nav__container">
                     <img src="./assets/icons/settings.svg" />
                     <p class="header-nav__container-text">Game Settings</p>
-                </button>
+                </a>
             </nav>
             <div class="header-container">
                 <button id="gameStateToggler" class="header-container__btn header-container__start-btn"><span id="gameStateText">Start</span> game</button>
@@ -46,7 +46,7 @@
             </div>
         </header>
 
-        <main class="main">
+        <main class="main" id="main">
             <section class="game">
                 <div id="gameFieldSubstrate"></div>
                 <div class="game-time">
